Fix T77358: Gpencil can't select geometry within transparent layers

This was an old check of opacity for editable layers, but with new system it's not needed because you can use the edit lines.