source/blender/blenkernel/intern/gpencil.c
@@ -839,12 +839,7 @@ bool BKE_gpencil_layer_is_editable(const bGPDlayer *gpl)
 
   /* Layer must be: Visible + Editable */
   if ((gpl->flag & (GP_LAYER_HIDE | GP_LAYER_LOCKED)) == 0) {
-    /* Opacity must be sufficiently high that it is still "visible"
-     * Otherwise, it's not really "visible" to the user, so no point editing...
-     */
-    if (gpl->opacity > GPENCIL_ALPHA_OPACITY_THRESH) {
-      return true;
-    }
+    return true;
   }
 
   /* Something failed */
